--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Document</title>
 </head>
 <body>
     <center><h1>Welcome to a Static Webpage</h1></center>
     <br>
-    <h2>Below is Sample paragraph</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ab atque molestiae facere doloribus blanditiis maiores deserunt, adipisci impedit cum, libero harum autem quia tenetur dicta placeat soluta itaque. Nemo eaque in delectus mollitia ducimus. Beatae dicta dolore magni sint repellendus omnis, iusto adipisci corporis molestiae optio ipsum? Et mollitia similique excepturi unde quos delectus molestiae dolores, laborum ad libero sed perspiciatis recusandae? Maxime natus cupiditate at commodi officia impedit possimus ipsam repellendus ad. Sint suscipit voluptatem architecto dolore ratione, beatae sed ipsum, sequi facere nulla aliquid quo pariatur necessitatibus adipisci tenetur, ipsam voluptas hic ut! Sint assumenda nulla cumque laborum necessitatibus nobis, ducimus, quidem debitis itaque a est error eius? Sit aliquid libero eveniet corrupti aperiam voluptates vel earum, maxime veritatis, expedita possimus sed veniam, ex ab at totam! Saepe quia vitae nam ducimus nihil ex praesentium accusantium? Ducimus quos in amet magnam doloribus totam ea dolor esse alias sapiente nisi, hic eveniet voluptates sint inventore a culpa impedit cupiditate expedita quia. Illo harum facere quaerat! Dicta ea quod suscipit odio saepe animi ipsum fugit, amet adipisci dignissimos aliquam? Id perspiciatis voluptatibus, neque suscipit totam laboriosam quas voluptas natus ut dignissimos similique! Quibusdam, quidem odit tempore similique sed voluptatibus sint iste enim? Recusandae corporis placeat consectetur, suscipit magni at, sit incidunt enim voluptatum ipsa similique voluptates soluta aperiam rerum reprehenderit voluptate nulla vel. Nam recusandae sed tenetur quos mollitia explicabo iusto, aliquid enim quasi, illum ab tempore. Quasi omnis laborum, architecto laudantium praesentium aliquam aliquid eaque voluptatum, ipsam recusandae quam deserunt. Provident delectus, a eligendi itaque doloribus ullam non pariatur similique suscipit corrupti dignissimos? Fugiat animi aut, quisquam impedit eius tempora voluptatum incidunt iusto autem, rem unde, veniam odit esse quo. Ipsam dolores libero, ex amet tempora praesentium quae tenetur reiciendis dolore unde saepe mollitia dignissimos. Officia reiciendis voluptas cumque, dolores repellat adipisci pariatur iste quia accusamus eius enim! Tempora, natus! Quis error, natus voluptatibus consequuntur doloremque voluptate incidunt nobis eligendi repellat sunt ab beatae delectus placeat eos quos provident sit adipisci voluptatem deleniti consectetur. Minus laudantium dolorum sit soluta quod, praesentium numquam voluptatem aliquid repellat odit necessitatibus consectetur fuga nobis assumenda vel! Amet modi voluptates, neque atque culpa doloribus excepturi sit illum eum nihil saepe architecto maiores, delectus corrupti, cum perferendis iusto. Libero, tempora? Atque laboriosam non eaque alias esse laborum commodi quod hic, aperiam itaque dolorem temporibus exercitationem eum, reiciendis labore iste doloribus ipsam nam molestiae, eos eius neque nihil ratione! Ad quibusdam ratione libero veritatis, delectus odio modi praesentium saepe fugit voluptatem ea suscipit veniam blanditiis. Placeat beatae commodi consequuntur eaque minima? Consequuntur perspiciatis sit repudiandae quo nobis similique fugit cupiditate magni omnis excepturi unde, aliquid cumque ea laboriosam aut et dolore reprehenderit molestias animi labore natus quam inventore officiis! Harum, non laborum quia numquam enim quas at necessitatibus expedita vel placeat, libero nisi ad id quidem error cupiditate accusamus aliquid. Totam amet commodi facere velit impedit laborum harum sapiente delectus! Libero sequi doloribus fugit vero soluta magni dolores quasi mollitia corrupti cupiditate nisi, totam recusandae.
-    </p>
+    <h2>Hello this is heading 2</h2>
+
+    <form id="myForm">
+        <input type="text" id="name_id" name="fname">
+        <input type="submit" value="Send Details">
+    </form>
+    <script src="script.js"></script>
 </body>
 </html>
